# MedVoiceRAG

./: .gitignore  README.md  pyproject.toml
docs/images/: .gitkeep
src/: app.py
src/audio/: speak.py  transcribe.py
src/eval/: evaluate.py  results.json  results.md
src/ingest/: build_index.py  fetch_pubmed.py
src/rag/: pipeline.py
