[tool.poetry]
name = "medvoice-rag"
version = "0.1.0"
description = "Medical Voice RAG system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "*"
langchain-openai = "*"
langchain-community = "^0.2.12"
chromadb = "*"
openai = "*"
gradio = "*"
gtts = "*"
ragas = "*"

python-dotenv = "*"
requests = "*"
biopython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
